Narrow illegal access requirements in buildscripts